# tc-lua

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: main.c
src/tc/: ShellExecute.c  SplitPath.c  __init__.c  __init__.h
src/utils/: defs.h
